<resources>
    <string name="app_name">Student Hostel</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="add_hostel">Add Hostel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="still_not_a_member">Still Not a Member?</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="login_now">Login now !</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="email">Email</string>
    <string name="still_not_a_member2">Still Not a Member?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="fax">Fax</string>
    <string name="next">Next</string>
    <string name="contact">Contact</string>
    <string name="sms">Sms</string>
    <string name="your_ad_has_been_published_successfully">Your ad has been published successfully</string>
    <string name="back_to_home">Back To Home</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="pay_now">Pay Now</string>
    <string name="general_information">General Information</string>
    <string name="title">Title</string>
    <string name="number_of_living_room">Number of Living Room</string>
    <string name="number_of_room">Number of Room</string>
    <string name="gross_m">Gross M²</string>
    <string name="net_m">Net M²</string>
    <string name="floor_location">Floor Location</string>
    <string name="warming_type">Warming Type</string>
    <string name="status">Status</string>
    <string name="you_can_add_30_photos_to_your_ad">You Can Add 30 Photos to your Ad</string>
    <string name="upload_from_your_phone">Upload From Your Phone</string>
    <string name="rental_income">Rental Income</string>
    <string name="welcome_image">Welcome image</string>
    <string name="find_any_thing_you_want">find any thing you want</string>
    <string name="your_dream_house_is_here">your dream house is here</string>
    <string name="featured_sales">Featured Sales</string>
    <string name="all">All</string>
    <string name="apartment_img">Apartment img</string>
    <string name="featured_rental">Featured Rental</string>
    <string name="all_sales">All Sales</string>
    <string name="all_rental">All Rental</string>
    <string name="search_places">search Places</string>
    <string name="filter_result">filter result</string>
    <string name="apartment_of_sale">Apartment for sale</string>
    <string name="footer_img">fouter img</string>
    <string name="apartment_for_type">Apartment for %1$s</string>
    <string name="confirm_and_pay">confirm and pay</string>
    <string name="book_now">Book Now</string>
    <string name="old_password">old password</string>
    <string name="new_password">New Password</string>
    <string name="old_password2">Old Password</string>
    <string name="s_ave">S ave</string>
    <string name="save">SAVE</string>
    <string name="beds">Beds</string>
    <string name="adress">Adress</string>
    <string name="contact_number">contact Number</string>
    <string name="email_adress">Email Adress</string>
    <string name="find_us">Find Us</string>
</resources>