<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header Home-->
        <ImageView
            android:id="@+id/header_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/welcome_image"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_img"
            app:layout_constraintBottom_toTopOf="@id/btn_all_sales"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Search View -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="6dp"
            android:queryHint="@string/search_places"
            app:hintTextColor="@color/black"
            app:defaultQueryHint="@string/search_places"
            app:iconifiedByDefault="false"
            android:hint="@string/app_name"
            android:background="@drawable/rounded_corner_background"
            android:padding="2dp"
            app:layout_constraintTop_toTopOf="@id/header_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_into_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/your_dream_house_is_here"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/header_img"
            app:layout_constraintEnd_toEndOf="@id/search_view"
            app:layout_constraintStart_toStartOf="@id/search_view"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <!-- Featured Sales-->

        <TextView
            android:id="@+id/txt_featured_sales"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="8dp"
            android:text="@string/featured_sales"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/rv_featured_sales"
            app:layout_constraintEnd_toStartOf="@+id/btn_all_sales"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_img" />

        <Button
            android:id="@+id/btn_all_sales"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/all_sales"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/rv_featured_sales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_img" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_featured_sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btn_all_rental"
            app:layout_constraintTop_toBottomOf="@id/btn_all_sales"
            tools:listitem="@layout/apartment_holder" />

        <!-- Featured Rental-->
        <TextView
            android:id="@+id/txt_featured_rental"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="8dp"
            android:text="@string/featured_rental"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/rv_featured_rental"
            app:layout_constraintEnd_toStartOf="@+id/btn_all_rental"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_featured_sales" />

        <Button
            android:id="@+id/btn_all_rental"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/all_rental"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/rv_featured_rental"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_featured_sales" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_featured_rental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/footer_img"
            app:layout_constraintTop_toBottomOf="@id/btn_all_rental"
            tools:listitem="@layout/apartment_holder" />

        <ImageView
            android:id="@+id/footer_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/footer_img"
            android:scaleType="fitXY"
            android:src="@drawable/footer_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintTop_toBottomOf="@id/rv_featured_rental" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
