<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/general_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/general_information"
                android:textColor="@color/black"
                android:layout_marginStart="70dp"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_of_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number_of_room"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/number_of_room" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_of_living_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number_of_living_room"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/number_of_living_room" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gross"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_gross"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/gross_m" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_net"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/net_m" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/warming_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_warming_type"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/warming_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/floor_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_floor_location"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/floor_location" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_status"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/status" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rental_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_rental_income"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/rental_income" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/add_img"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="180dp"
                android:src="@drawable/baseline_add_photo" />

            <TextView
                android:id="@+id/add_img_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="90dp"
                android:text="@string/you_can_add_30_photos_to_your_ad" />

            <Button
                android:id="@+id/btn_upload_from_your_phone"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/upload_from_your_phone"
                android:layout_marginStart="60dp"
                android:backgroundTint="@color/red" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/next"
                android:layout_marginStart="60dp"
                android:backgroundTint="@color/red" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
