<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PayFragment">
<ImageView
    android:id="@+id/visa_img"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:src="@drawable/visa"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/visa_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        />
    <TextView
        android:id="@+id/subtotal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="200$"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/visa_img"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        />
    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/subtotal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/tax_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="20$"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/subtotal_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tax"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="150.50$"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tax_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        />
    <Button
        android:id="@+id/btn_pay_now"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pay_now"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total" />
</androidx.constraintlayout.widget.ConstraintLayout>